--- a/client/src/components/layout/hamburger/Hamburger.module.scss
+++ b/client/src/components/layout/hamburger/Hamburger.module.scss
@@ -11,6 +11,14 @@
     cursor: pointer;
   }
 
+  > button {
+    font-size: 30px;
+
+    > svg > path {
+      fill: white;
+    }
+  }
+
   .menu {
     position: absolute;
     top: calc(100% + 8px);
