--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -2,8 +2,8 @@
 
 $accent: #B53471;
 $white: #f1e8e8;
-$black: #1a0612;
-$hard-dark-accent: darken($accent, 30%);
+$black: darken($accent,38%);
+$hard-dark-accent: darken($accent, 20%);
 $dark-accent: darken($accent, 18%);
 
 $bx-accent: 0 4px 4px rgba($accent, 0.25);
